# chess_project

./: README.md
action/: CMakeLists.txt  README.md  package.xml
action/launch/: action.launch
action/src/: action.cpp  gripper_action_client.cpp  ur3_action_client.cpp  ur3_action_client2.cpp
action/srv/: actionKill.srv  actionMove.srv  actionPick.srv  actionPlace.srv  gotoJoints.srv  planPick.srv
chesslab_setup/: CMakeLists.txt  README.md  package.xml
chesslab_setup/config/: chesslab_setup.rviz  chesslab_simple.rviz  chesslab_simple_cameras.rviz  my_robot_calibration.yaml  new_controllers.yaml  new_controllers_gripper.yaml
chesslab_setup/launch/: chessworld.launch  demo_services.launch  display.launch  new-dashboard.launch.xml  new-dashboard.launch_old.xml  only_cameras_w_calib_sim.launch  only_cameras_wo_calib_sim.launch  real_scenario.launch  realsense_camera.launch  simulated_scenario.launch  simulated_scenario_no_camera.launch  ur3_bringup_custom.launch  ur3_upload_custom.launch  ur3e_bringup_custom.launch
chesslab_setup/robot/: camera_right.urdf.xacro  team_A_arm.urdf.xacro  team_A_arm_gripper.urdf.xacro  team_A_gripper.urdf.xacro
chesslab_setup/robot/sensors/: _d415.urdf.xacro  cam_holder.urdf.xacro
chesslab_setup/src/: chesslab_setup_node.cpp  demo_attach.cpp  demo_collision.cpp  demo_detach.cpp  demo_ik.cpp  demo_movepiece.cpp  demo_planmotions.cpp
chesslab_setup/srv/: ik.srv
chesslab_setup/worlds/: flat_chesslab.world
planning/: CMakeLists.txt  README.md  package.xml
planning/src/: planning.cpp  task_planning.cpp
planning/srv/: planCastle.srv  planKill.srv  planMove.srv  planPlace.srv
sensing/: CMakeLists.txt  README.md  package.xml
sensing/launch/: sensing.launch
sensing/src/: sensing.cpp
sensing/srv/: getPiecePose.srv
