<?xml version="1.0"?>
<package format="2">
  <name>chesslab_setup</name>
  <version>0.0.1</version>
  <description>The chesslab_setup package</description>

  <maintainer email="jan.rosell@upc.edu">Jan Rosell</maintainer>
  

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>ur_description</depend>
  <depend>ur_e_description</depend>
  <depend>robotiq_2f_model</depend>
  <depend>robotiq_2f_gripper_server</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>robotiq_modbus_rtu</depend>
  <depend>roboticsgroup_gazebo_plugins</depend>
  <depend>gazebo_ros_link_attacher</depend>
  <depend>downward_ros</depend>
  <depend>aruco_ros</depend>
  <depend>aruco_broadcaster</depend>
  <depend>ur3ik</depend>
  <depend>gazebo_ros</depend>

  <!--depend>kautham</depend-->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>  
  </export>
</package>
